adding toast and replacing alerts; translate new board name;

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --toastify-color-light: rgba(226, 232, 240, .8);
+  --toastify-color-dark: rgba(30, 41, 59, .8);
+}
